--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:12.0.0'
     implementation 'com.google.firebase:firebase-auth:12.0.0'
     implementation 'com.google.firebase:firebase-database:12.0.0'
+
+    implementation 'com.google.api-client:google-api-client-android:1.22.0'
+    implementation 'com.google.apis:google-api-services-speech:v1beta1-rev336-1.22.0'
+    implementation 'com.google.apis:google-api-services-language:v1beta2-rev6-1.22.0'
+    implementation 'com.google.code.findbugs:jsr305:2.0.1'
+    implementation 'commons-io:commons-io:2.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
