--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.folio">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -21,6 +21,10 @@
         <activity android:name=".SignUpPageActivity" />
         <activity android:name=".ForgotPasswordActivity" />
         <activity android:name=".HomePageActivity" />
+        <activity
+            android:name=".StockActivity"
+            android:label="@string/title_activity_stock"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
