--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.apis:google-api-services-language:v1beta2-rev6-1.22.0'
     implementation 'com.google.code.findbugs:jsr305:2.0.1'
     implementation 'commons-io:commons-io:2.5'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
