--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'com.google.code.findbugs:jsr305:2.0.1'
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation 'de.codecrafters.tableview:tableview:2.8.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
