--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.5'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     implementation 'de.codecrafters.tableview:tableview:2.8.0'
+    implementation 'org.twitter4j:twitter4j-core:4.0.6'
 
-    compile 'org.twitter4j:twitter4j-core:[4.0,)'
-    
 }
 
 apply plugin: 'com.google.gms.google-services'
