--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,9 @@
         </activity>
         <activity android:name=".SignUpPageActivity" />
         <activity android:name=".ForgotPasswordActivity" />
-        <activity android:name=".HomePageActivity" />
-        <activity android:name=".AnalysisActivity" />
-        <activity android:name=".StockActivity" />
+        <activity android:name=".HomePageActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AnalysisActivity" android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".StockActivity" android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
 
