--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         <activity android:name=".AnalysisActivity" android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".StockActivity" android:theme="@style/AppTheme.NoActionBar" />
 
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
+
     </application>
 
 </manifest>
